fix align issue on m

--- a/style.css
+++ b/style.css
@@ -630,6 +630,10 @@ footer {
 }
 
 @media only screen and (min-width: 586px) and (max-width: 1024px) {
+  body {
+    text-align: center;
+  }
+
   .sub-container {
     padding-top: 5%;
     width: 90%;
